--- a/src/app/page_users/home-user/home-user.component.html
+++ b/src/app/page_users/home-user/home-user.component.html
@@ -1,44 +1,4 @@
 <body>
-  <!-- ======= Header ======= -->
-  <!-- <header id="header" class="fixed-top">
-    <div class="container d-flex align-items-center">
-
-      <h1 class="logo me-auto">
-        <a href="index.html">
-          <img  src="../../../assets/img/logo-trung-tam-hsk.png" alt="">
-        </a></h1>
-
-      <nav id="navbar" class="navbar order-last order-lg-0">
-        <ul>
-          <li><a class="active" routerLink="/home-user">Trang chủ</a></li>
-          <li><a routerLink="/about">Giới thiệu</a></li>
-          <li class="dropdown"><a routerLink="/child-english"><span>Chương trình học</span> <i class="bi bi-chevron-down"></i></a>
-            <ul>
-              <li><a routerLink="/child-english">Tiếng Anh thiếu nhi</a></li>
-              <li><a routerLink="/young-english">Tiếng Anh thiếu niên</a></li>
-              <li><a routerLink="/ielts">Luyện thi IELTS</a></li>
-              <li><a routerLink="/toiec">Luyện thi TOEFL - TOEIC & CHỨNG CHỈ QUỐC TẾ</a></li>
-              <li><a routerLink="/basic-english">Tiếng Anh Căn Bản - Giao tiếp & Tiếng Anh cho người đi làm</a></li>
-            </ul>
-          </li>
-          <li class="dropdown"><a routerLink="/child-schedule"><span>Lịch Khai Giảng</span> <i class="bi bi-chevron-down"></i></a>
-            <ul>
-              <li><a routerLink="/child-schedule">Tiếng Anh thiếu nhi</a></li>
-              <li><a routerLink="/young-schedule">Tiếng Anh thiếu niên</a></li>
-              <li><a routerLink="/ielts-schedule">Luyện thi IELTS</a></li>
-              <li><a routerLink="/toiec-schedule">Luyện thi TOEFL - TOEIC & CHỨNG CHỈ QUỐC TẾ</a></li>
-              <li><a routerLink="/basic-schedule">Tiếng Anh Căn Bản - Giao tiếp & Tiếng Anh cho người đi làm</a></li>
-            </ul>
-          </li>
-          <li><a routerLink="/contact">Liên hệ</a></li>
-          <li><a *ngIf="!loggedIn" routerLink="/login-user">Đăng nhập</a></li>
-          <li><a *ngIf="loggedIn" (click)="handleLogout()">Đăng xuất</a></li>
-        </ul>
-        <i class="bi bi-list mobile-nav-toggle"></i>
-      </nav>
-    </div>
-  </header> -->
-  <!-- End Header -->
   <app-navbar-user></app-navbar-user>
 
   <!-- ======= Hero Section ======= -->
@@ -83,54 +43,6 @@
     </section>
     <!-- End About Section -->
 
-    <!-- ======= Why Us Section ======= -->
-    <!-- <section id="why-us" class="why-us">
-      <div class="container" data-aos="fade-up">
-
-        <div class="row">
-          <div class="col-lg-4 d-flex align-items-stretch">
-            <div class="content">
-              <h3>Vì sao chọn Trung tâm HSK?</h3>
-              <p>
-                Chương trình liên thông từ cấp độ khởi đầu dành cho trẻ em độ tuổi mầm non nâng dần lên mốc chuẩn đầu ra là chương trình chứng chỉ IELTS Quốc tế; ngôn ngữ được phát triển lồng ghép với các kỹ năng và giá trị sống giúp học viên tự tin hòa nhập toàn cầu.              </p>
-              <div class="text-center">
-                <a href="about.html" class="more-btn">Đọc thêm <i class="bx bx-chevron-right"></i></a>
-              </div>
-            </div>
-          </div>
-          <div class="col-lg-8 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="100">
-            <div class="icon-boxes d-flex flex-column justify-content-center">
-              <div class="row">
-                <div class="col-xl-4 d-flex align-items-stretch">
-                  <div class="icon-box mt-4 mt-xl-0">
-                    <i class="bx bx-receipt"></i>
-                    <h4>Đi đầu về khảo thí tại khu vực Đồng bằng sông Cửu Long:</h4>
-                    <p>Gia Việt là đối tác khảo thí tại ĐBSCL cho các chuẩn mực tiếng Anh quốc tế của các tổ chức có uy tín</p>
-                  </div>
-                </div>
-                <div class="col-xl-4 d-flex align-items-stretch">
-                  <div class="icon-box mt-4 mt-xl-0">
-                    <i class="bx bx-cube-alt"></i>
-                    <h4>Tập thể giáo viên chất lượng:</h4>
-                    <p>Lấy chất lượng làm tiêu chí phấn đấu hàng đầu, HSK luôn tuân thủ và nêu cao các chuẩn mực về năng lực chuyên môn và đạo đức nghề nghiệp.</p>
-                  </div>
-                </div>
-                <div class="col-xl-4 d-flex align-items-stretch">
-                  <div class="icon-box mt-4 mt-xl-0">
-                    <i class="bx bx-images"></i>
-                    <h4>Đa dạng hoạt động ngoại khoá hỗ trợ:</h4>
-                    <p>Nhiều hoạt động ngoại khoá được tổ chức thường xuyên nhằm tạo cơ hội cho học viên ứng dụng ngôn ngữ trong thực tiễn đời sống.</p>
-                  </div>
-                </div>
-              </div>
-            </div>
-
-          </div>
-        </div>
-
-      </div>
-    </section> -->
-    <!-- End Why Us Section -->
 
     <!-- ======= Popular Courses Section ======= -->
     <section id="popular-courses" class="courses">
@@ -165,38 +77,23 @@
             <table width="100%" >
               <thead >
                   <tr >
-                    <th><span class="las la-sort"></span> CHƯƠNG TRÌNH</th>
+                    <th><span class="las la-sort"></span> CHƯƠNG TRÌNH ĐÀO TẠO</th>
+                    <th><span class="las la-sort"></span> CHƯƠNG TRÌNH HỌC</th>
                     <th><span class="las la-sort"></span> CẤP ĐỘ</th>
-                    <!-- <th><span class="las la-sort"></span> HỌC PHÍ</th> -->
-                    <!-- <th><span class="las la-sort"></span> LỊCH HỌC</th> -->
                     <th><span class="las la-sort"></span> NGÀY KHAI GIẢNG</th>
-                    <!-- <th><span class="las la-sort"></span> THỜI LƯỢNG KHÓA</th> -->
-                    <!-- <th><span class="las la-sort"></span> ĐĂNG KÝ</th> -->
           </thead>
               <tbody *ngFor="let course of courses">
                 <tr>
-                    <!-- <td>{{course?.course_id}}</td> -->
+                    <td>{{course.english.englishName}}</td>
                     <td>
-                        {{course?.program}}
+                        {{course.program}}
                     </td>
                     <td>
-                        {{course?.level}}
+                        {{course.level}}
                     </td>
-                    <!-- <td>
-                        {{course?.price | currency:'VND'}}
-                    </td> -->
-                    <!-- <td>
-                      {{course?.schedule}}
-                    </td> -->
                     <td>
-                    {{course?.openning}}
+                    {{course.openning}}
                   </td>
-                  <!-- <td>
-                    {{course?.time}}
-                  </td> -->
-                  <!-- <td>
-                    <a class="text-success" (click)="updateCourse(course.course_id)">Đăng ký ngay!</a>
-                  </td> -->
                 </tbody>
             </table>
           </div>
@@ -205,74 +102,6 @@
 
       </div>
     </section><!-- End Popular Courses Section -->
-
-    <!-- ======= Trainers Section ======= -->
-    <!-- <section id="trainers" class="trainers">
-      <div class="container" data-aos="fade-up">
-
-        <div class="row" data-aos="zoom-in" data-aos-delay="100">
-          <div class="col-lg-4 col-md-6 d-flex align-items-stretch">
-            <div class="member">
-              <img src="https://cdn.ivolunteervietnam.com/wp-content/uploads/2022/09/09095905/B%E1%BA%A3n-sao-c%E1%BB%A7a-K%C3%ADch-th%C6%B0%E1%BB%9Bc-800x500px_%E1%BA%A2nh-%C4%90%E1%BA%A1i-Di%E1%BB%87n-B%C3%A0i-%C4%90%C4%83ng-Website-iVolunteer-9-3.png" class="img-fluid" alt="">
-              <div class="member-content">
-                <h4>Đồng Thị Anh Thư</h4>
-                <span>Giáo viên TOEIC</span>
-                <p>
-                  Hơn 5 năm giảng dạy các học viên, luôn nhiệt huyết trong công tác giảng dạy.
-                </p>
-                <div class="social">
-                  <a href=""><i class="bi bi-twitter"></i></a>
-                  <a href=""><i class="bi bi-facebook"></i></a>
-                  <a href=""><i class="bi bi-instagram"></i></a>
-                  <a href=""><i class="bi bi-linkedin"></i></a>
-                </div>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-lg-4 col-md-6 d-flex align-items-stretch">
-            <div class="member">
-              <img src="https://cdn.ivolunteervietnam.com/wp-content/uploads/2022/09/09095905/B%E1%BA%A3n-sao-c%E1%BB%A7a-K%C3%ADch-th%C6%B0%E1%BB%9Bc-800x500px_%E1%BA%A2nh-%C4%90%E1%BA%A1i-Di%E1%BB%87n-B%C3%A0i-%C4%90%C4%83ng-Website-iVolunteer-9-3.png" class="img-fluid" alt="">
-              <div class="member-content">
-                <h4>Đồng Thị Anh Thư</h4>
-                <span>Giáo viên TOEIC</span>
-                <p>
-                  Hơn 5 năm giảng dạy các học viên, luôn nhiệt huyết trong công tác giảng dạy.
-                </p>
-                <div class="social">
-                  <a href=""><i class="bi bi-twitter"></i></a>
-                  <a href=""><i class="bi bi-facebook"></i></a>
-                  <a href=""><i class="bi bi-instagram"></i></a>
-                  <a href=""><i class="bi bi-linkedin"></i></a>
-                </div>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-lg-4 col-md-6 d-flex align-items-stretch">
-            <div class="member">
-              <img src="https://cdn.ivolunteervietnam.com/wp-content/uploads/2022/09/09095905/B%E1%BA%A3n-sao-c%E1%BB%A7a-K%C3%ADch-th%C6%B0%E1%BB%9Bc-800x500px_%E1%BA%A2nh-%C4%90%E1%BA%A1i-Di%E1%BB%87n-B%C3%A0i-%C4%90%C4%83ng-Website-iVolunteer-9-3.png" class="img-fluid" alt="">
-              <div class="member-content">
-                <h4>Đồng Thị Anh Thư</h4>
-                <span>Giáo viên TOEIC</span>
-                <p>
-                  Hơn 5 năm giảng dạy các học viên, luôn nhiệt huyết trong công tác giảng dạy.
-                </p>
-                <div class="social">
-                  <a href=""><i class="bi bi-twitter"></i></a>
-                  <a href=""><i class="bi bi-facebook"></i></a>
-                  <a href=""><i class="bi bi-instagram"></i></a>
-                  <a href=""><i class="bi bi-linkedin"></i></a>
-                </div>
-              </div>
-            </div>
-          </div>
-
-        </div>
-
-      </div>
-    </section> -->
-    <!-- End Trainers Section -->
 
   </main><!-- End #main -->
 <app-footer></app-footer>
